# play-man

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md  TC-mingw.cmake  overview.drawio
.github/workflows/: unit-tests.yaml
Scripts/: Opcodes json to enum.cpp  binaryFileWriter.py
includes/ROM/: Rom.hpp  RomHeaderDefines.hpp
includes/play-man/: test.hpp
includes/play-man/IssueHandler/: ErrorCodes.hpp  Issue.hpp  IssueHandler.hpp
includes/play-man/Logger/: Logger.hpp
includes/play-man/ROM/: Rom.hpp  RomHeaderDefines.hpp  RomParser.hpp
includes/play-man/Utility/: Signal.hpp
includes/play-man/containers/: EnumIndexableArray.hpp
includes/play-man/gameboy/cartridge/: ACartridge.hpp  Cartridge.hpp  CartridgeDefines.hpp  MBC1.hpp  MBC2.hpp  MBC3.hpp  MBC5.hpp  MCB1.hpp  NoMBC.hpp  Rom.hpp  RomHeaderDefines.hpp
includes/play-man/gameboy/cpu/: Cpu.hpp  CpuCore.hpp  CpuCoreDefines.hpp  CycleDefines.hpp  Instruction.hpp  Opcodes.hpp  Register.hpp  Register.ipp
includes/play-man/gameboy/graphics/: PPU.hpp  PPUDefines.hpp
includes/play-man/gameboy/memory/: MemoryBus.hpp  MemoryBusDefines.hpp  MemoryDefines.hpp
includes/play-man/gameboy/memoryBus/: IORangeDefines.hpp  MemoryBus.hpp  MemoryBusDefines.hpp
includes/play-man/gameboy/opcodes/: Opcodes.hpp
includes/play-man/gameboy/ppu/: PPU.hpp  PPUDefines.hpp  PixelFiFoFetcher.hpp
includes/play-man/gameboy/rom/: Rom.hpp  RomHeaderDefines.hpp  RomParser.hpp
includes/play-man/graphics/: UserInterface.hpp  UserInterfaceDefines.hpp
includes/play-man/issueHandler/: ErrorCodes.hpp  Issue.hpp  IssueHandler.hpp
includes/play-man/logger/: Logger.hpp
includes/play-man/settings/: ISettings.hpp  PlayManSettings.hpp
includes/play-man/signal/: Signal.hpp
includes/play-man/utility/: Concepts.hpp  EnumMacro.hpp  JsonUtility.hpp  JsonUtility.ipp  MetaUtility.hpp  UtilFunc.hpp
lib/: test.cpp
lib/IssueHandler/: Issue.cpp  IssueHandler.cpp
lib/Logger/: Logger.cpp
lib/ROM/: Rom.cpp  RomParser.cpp
lib/gameboy/cartridge/: ACartridge.cpp  Cartridge.cpp  MBC1Cartridge.cpp  MBC2Cartridge.cpp  MBC3Cartridge.cpp  MBC3RealTimeClock.cpp  MBC5Cartridge.cpp  MCB1Cartridge.cpp  NoMBCCartridge.cpp  Rom.cpp
lib/gameboy/cpu/: Cpu.cpp  CpuCore.cpp  Register.cpp
lib/gameboy/cpu/instructions/: 16bitLoadInstructions.cpp  Controllnstructions.cpp  Instruction.cpp  InstructionTable.cpp
lib/gameboy/cpu/instructions/implementations/: 16bitLoadStoreMoveInstructions.cpp  16bitLogicalInstructions.cpp  8bitLoadStoreMoveInstructions.cpp  8bitLogicalInstructions.cpp  8bitRotateShiftInstructions.cpp  BitOperations.cpp  Bitwise.cpp  BitwiseInstructions.cpp  Controll.cpp  Controllnstructions.cpp  JumpCall.cpp  JumpCallInstructions.cpp  LoadStoreMove.cpp  LoadStoreMoveInstructions.cpp  Logical.cpp  LogicalInstructions.cpp  RotateShift.cpp  RotateShiftInstructions.cpp
lib/gameboy/graphics/: PPU.cpp
lib/gameboy/memory/: MemoryBus.cpp
lib/gameboy/memoryBus/: MemoryBus.cpp  MemoryBusIO.cpp
lib/gameboy/ppu/: DMA.cpp  PPU.cpp  PPUReadWrite.cpp  PixelFiFo.cpp
lib/gameboy/rom/: Rom.cpp  RomParser.cpp
lib/graphics/: UserInterface.cpp
lib/issueHandler/: Issue.cpp  IssueHandler.cpp
lib/logger/: Logger.cpp
lib/settings/: PlayManSettings.cpp
lib/utility/: JsonUtility.cpp  UtilFunc.cpp
src/: main.cpp  pc-main.cpp
src/IssueHandler/: Issue.cpp  IssueHandler.cpp
testing/dockerfiles/linux/: Dockerfile
testing/dockerfiles/windows/: Dockerfile
testing/test-data/custom_gb_test_roms/: 0x01.gb  0x05.gb  0x10.gb  0x1F.gb  0x55.gb  0xAA.gb  0xF1.gb  jump_relative_test.gb  test_rom.gb
testing/test-data/settings/: partialPlayManSettings.json  settings.json
testing/unit-tests/: CMakeLists.txt  README.md
testing/unit-tests/containers/: EnumIndexableArrayTests.cpp
testing/unit-tests/gameboy/: InstructionTests.cpp  PrefixedInstructionsTests.cpp  RegisterTests.cpp
testing/unit-tests/issueHandler/: IssueHandlerTests.cpp
testing/unit-tests/logger/: LoggerTests.cpp
testing/unit-tests/settings/: PlayManSettingsTests.cpp
testing/unit-tests/utility/: MetaUtilityTests.cpp  UtilFuncTests.cpp
unit-tests/: CMakeLists.txt
unit-tests/dockerfiles/linux/: Dockerfile
unit-tests/gameboy/: Test.cpp
unit-tests/issueHandler/: IssueHandlerTests.cpp
unit-tests/logger/: LoggerTests.cpp
unit-tests/signal/: SignalTests.cpp
unit_tests/: CMakeLists.txt  run_all_tests.sh
unit_tests/IssueHandler/: IssueHandlerTests.cpp
unit_tests/Signal/: SignalTests.cpp
unit_tests/Utility/: IssueHandlerTests.cpp  SignalTests.cpp
unit_tests/dockerfiles/linux/: Dockerfile
unit_tests/dockerfiles/macos/: Dockerfile
unit_tests/gameboy/: Test.cpp
unit_tests/issueHandler/: IssueHandlerTests.cpp
unit_tests/settings/: PlayManSettingsTests.cpp
unit_tests/testData/settings/: invalidSettings.json
unit_tests/utility/: EnumMacro.cpp  LoggerTests.cpp  UtilFuncTests.cpp
